--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 ################################################################################
 
 /Blender/.vs/CrystalPython/v16
+/Blender/.vs/CrystalPython/v16
+/Blender/CrystalPLI/x64/Debug
+/Blender/x64/Debug
+/Blender/x64/Debug
+/Blender/x64/Debug
+/Blender/x64/Debug
+/Blender/x64/Debug
+/Blender/x64/Debug
+/Blender/x64/Release
+/Blender/CrystalPLI/x64/Release
